changed color of text

--- a/css/favorite-style.css
+++ b/css/favorite-style.css
@@ -1,6 +1,6 @@
 /*style sheet for favorite-places.html and my-first-webpage.html*/
 h1{
-  color: teal;
+  color: burlywood;
   text-align: center;
   font-style:italic;
   font-family: 'Times New Roman', Times, serif;
